--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,16 +2,16 @@
 $body-bg: #f5f8fa;
 
 // Typography
-$font-family-sans-serif: "Raleway", sans-serif;
+$font-family-sans-serif: Arial, sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
-$text-color: #636b6f;
 
 // Navbar
-$navbar-default-bg: #fff;
+$navbar-dark-color: rgba(#fff, .8);
+$navbar-dark-hover-color: rgba(#fff, .95);
 
-// Buttons
-$btn-default-color: $text-color;
-
-// Panels
-$panel-default-heading-bg: #fff;
+$primary: #337ab7;
+$success: #4bd24d;
+$info: #5bc0de;
+$warning: #f0ad4e;
+$danger: #d9534f;
