--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,10 +1,9 @@
 // Body
-$body-bg: #f5f8fa;
+$body-bg: #fff;
 
 // Typography
 $font-family-sans-serif: Arial, sans-serif;
 $font-size-base: 0.9rem;
-$line-height-base: 1.6;
 
 // Navbar
 $navbar-dark-color: rgba(#fff, .8);
