--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,6 +4,11 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Fontawesome
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+
 body {
     display: flex;
     flex-direction: column;
