Added styles for search section and breadcrumbs

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -50,3 +50,12 @@ body {
         }
     }
 }
+
+.search-bar {
+    background: #e9ecef;
+}
+
+.breadcrumb {
+    background: none;
+    padding: 0;
+}
